--- a/pom.xml
+++ b/pom.xml
@@ -18,7 +18,7 @@
 
 
     <!-- Dependencies versions -->
-    <javalin.version>5.6.5</javalin.version>
+    <javalin.version>6.1.3</javalin.version>
     <junit.version>5.10.2</junit.version>
     <mockito.version>5.11.0</mockito.version>
     <retrofit.version>2.11.0</retrofit.version>
@@ -69,7 +69,7 @@
     <dependency>
       <groupId>io.javalin</groupId>
       <artifactId>javalin</artifactId>
-      <version>${javalin.version}</version>
+      <version>6.1.3</version>
     </dependency>
 
     <dependency>
@@ -115,6 +115,22 @@
       <groupId>org.hibernate</groupId>
       <artifactId>hibernate-entitymanager</artifactId>
       <version>5.6.15.Final</version>
+    </dependency>
+    <dependency>
+      <groupId>io.micrometer</groupId>
+      <artifactId>micrometer-registry-prometheus</artifactId>
+      <version>1.13.0</version>
+    </dependency>
+    <dependency>
+      <groupId>io.micrometer</groupId>
+      <artifactId>micrometer-registry-datadog</artifactId>
+      <version>1.13.0</version>
+    </dependency>
+
+    <dependency>
+      <groupId>io.javalin</groupId>
+      <artifactId>javalin-micrometer</artifactId>
+      <version>6.1.3</version>
     </dependency>
 
   </dependencies>
